@@ -1,7 +1,7 @@
 // drumkv1widget_keybd.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012-2021, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2025, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -54,18 +54,13 @@ drumkv1widget_keybd::drumkv1widget_keybd ( QWidget *pParent )
 	QWidget::setMinimumSize(QSize(440, 22));
 	QWidget::setMouseTracking(true);
 
-	for (int n = 0; n < NUM_NOTES; ++n)
-		m_notes[n].on = false;
+	for (int n = 0; n < NUM_NOTES; ++n) {
+		Note& note = m_notes[n];
+		note.enabled = false;
+		note.on = false;
+	}
 
 	m_dragCursor = DragNone;
-
-	m_bNoteRange = false;
-
-	m_iNoteLow   = MIN_NOTE;
-	m_iNoteLowX  = 0;
-
-	m_iNoteHigh  = MAX_NOTE;
-	m_iNoteHighX = 0;
 
 	m_iNoteOn    = -1;
 	m_iTimeout   = 0;
@@ -80,18 +75,20 @@ drumkv1widget_keybd::drumkv1widget_keybd ( QWidget *pParent )
 }
 
 
-// Note range predicate.
-void drumkv1widget_keybd::setNoteRange ( bool bNoteRange )
+// Note enabled predicate.
+void drumkv1widget_keybd::setNoteEnabled ( int iNote, bool bEnabled )
 {
-	m_bNoteRange = bNoteRange;
-
-	QWidget::update();
+	if (iNote >= MIN_NOTE && MAX_NOTE >= iNote)
+		m_notes[iNote].enabled = bEnabled;
 }
 
 
-bool drumkv1widget_keybd::isNoteRange (void) const
+bool drumkv1widget_keybd::isNoteEnabled ( int iNote ) const
 {
-	return m_bNoteRange;
+	if (iNote >= MIN_NOTE && MAX_NOTE >= iNote)
+		return m_notes[iNote].enabled;
+	else
+		return false;
 }
 
 
@@ -110,60 +107,6 @@ void drumkv1widget_keybd::setVelocity ( int iVelocity )
 int drumkv1widget_keybd::velocity (void) const
 {
 	return m_iVelocity;
-}
-
-
-// Keyboard note range sanitizers.
-int drumkv1widget_keybd::safeNoteLow ( int iNoteLow ) const
-{
-	if (iNoteLow < MIN_NOTE)
-		iNoteLow = MIN_NOTE;
-	if (iNoteLow > m_iNoteHigh)
-		iNoteLow = m_iNoteHigh;
-
-	return iNoteLow;
-}
-
-
-int drumkv1widget_keybd::safeNoteHigh ( int iNoteHigh ) const
-{
-	if (iNoteHigh > MAX_NOTE)
-		iNoteHigh = MAX_NOTE;
-	if (iNoteHigh < m_iNoteLow)
-		iNoteHigh = m_iNoteLow;
-
-	return iNoteHigh;
-}
-
-
-// Keyboard note range setters/getters.
-void drumkv1widget_keybd::setNoteLow ( int iNoteLow )
-{
-	m_iNoteLow  = safeNoteLow(iNoteLow);
-	m_iNoteLowX = noteRect(m_iNoteLow).left();
-
-	QWidget::update();
-}
-
-
-int drumkv1widget_keybd::noteLow (void) const
-{
-	return m_iNoteLow;
-}
-
-
-void drumkv1widget_keybd::setNoteHigh ( int iNoteHigh )
-{
-	m_iNoteHigh  = safeNoteHigh(iNoteHigh);
-	m_iNoteHighX = noteRect(m_iNoteHigh).right();
-
-	QWidget::update();
-}
-
-
-int drumkv1widget_keybd::noteHigh (void) const
-{
-	return m_iNoteHigh;
 }
 
 
@@ -232,7 +175,7 @@ QPainterPath drumkv1widget_keybd::notePath ( int iNote, bool bOn ) const
 // Piano keyboard note/key actions.
 void drumkv1widget_keybd::noteOn ( int iNote )
 {
-	if (iNote < m_iNoteLow || iNote > m_iNoteHigh)
+	if (iNote < MIN_NOTE || iNote > MAX_NOTE)
 		return;
 
 	// If it ain't changed we won't change it ;)
@@ -250,7 +193,7 @@ void drumkv1widget_keybd::noteOn ( int iNote )
 
 void drumkv1widget_keybd::noteOff ( int iNote )
 {
-	if (iNote < m_iNoteLow || iNote > m_iNoteHigh)
+	if (iNote < MIN_NOTE || iNote > MAX_NOTE)
 		return;
 
 	// Turn off old note...
@@ -303,7 +246,7 @@ void drumkv1widget_keybd::dragNoteOn ( const QPoint& pos )
 	// Compute new key cordinates...
 	const int iNote = noteAt(pos);
 
-	if (iNote < m_iNoteLow || iNote > m_iNoteHigh || iNote == m_iNoteOn)
+	if (iNote < MIN_NOTE || iNote > MAX_NOTE || iNote == m_iNoteOn)
 		return;
 
 	// Were we pending on some sounding note?
@@ -424,13 +367,9 @@ void drumkv1widget_keybd::updatePixmap (void)
 			const int x1 = int(wk * float(nk + 1) - float(w2 >> 1));
 			painter.drawRect(x1, 0, w2, h3);
 		}
+		m_notes[n].path = notePath(n, (n == m_iNoteKey
+			&& m_iNoteKey >= MIN_NOTE && MAX_NOTE >= m_iNoteKey));
 	}
-
-	m_iNoteLowX  = noteRect(m_iNoteLow).left();
-	m_iNoteHighX = noteRect(m_iNoteHigh).right();
-
-	if (m_iNoteKey >= MIN_NOTE && MAX_NOTE >= m_iNoteKey)
-		m_notes[m_iNoteKey].path = notePath(m_iNoteKey, true);
 }
 
 
@@ -444,37 +383,25 @@ void drumkv1widget_keybd::paintEvent ( QPaintEvent *pPaintEvent )
 	painter.drawPixmap(rect, m_pixmap, rect);
 
 	const QPalette& pal = QWidget::palette();
-	QColor rgbOver;
+	QColor rgbGray = pal.mid().color();
+	rgbGray.setAlpha(120);
 
 	// Are we enabled still?
 	if (!QWidget::isEnabled()) {
-		rgbOver = pal.mid().color();
-		rgbOver.setAlpha(120);
-		painter.fillRect(rect, rgbOver);
+		painter.fillRect(rect, rgbGray);
 		return;
 	}
 
 	// Are we sticking in some note?
-	rgbOver = pal.highlight().color().darker(120);
+	QColor rgbOver = pal.highlight().color().darker(120);
 	rgbOver.setAlpha(180);
 	for (int n = 0; n < NUM_NOTES; ++n) {
 		Note& note = m_notes[n];
+		if (!note.enabled)
+			painter.fillPath(note.path, rgbGray);
+		else
 		if (note.on)
 			painter.fillPath(note.path, rgbOver);
-	}
-
-	// Keyboard range lines...
-	if (m_bNoteRange) {
-		const int w  = QWidget::width();
-		const int h  = QWidget::height();
-		const int x1 = m_iNoteLowX;
-		const int x2 = m_iNoteHighX;
-		rgbOver = pal.dark().color().darker();
-		rgbOver.setAlpha(120);
-		if (x1 > 0)
-			painter.fillRect(0, 0, x1, h, rgbOver);
-		if (x2 < w)
-			painter.fillRect(x2, 0, w, h, rgbOver);
 	}
 
 	// Current highlighted note.
@@ -529,107 +456,11 @@ void drumkv1widget_keybd::mouseMoveEvent ( QMouseEvent *pMouseEvent )
 	const QPoint& pos = pMouseEvent->pos();
 
 	switch (m_dragState) {
-	case DragNone:
-		if (m_bNoteRange) {
-			// Are we already moving/dragging something?
-			const int dx = 4;
-			const int x1 = m_iNoteLowX;
-			const int x2 = m_iNoteHighX;
-			if (::abs(x2 - pos.x()) < dx) {
-				m_dragCursor = DragNoteHigh;
-				QWidget::setCursor(QCursor(Qt::SizeHorCursor));
-				QToolTip::showText(
-					QWidget::mapToGlobal(pos),
-					tr("High: %1 (%2)")
-						.arg(noteName(m_iNoteHigh)).arg(m_iNoteHigh), this);
-			}
-			else
-			if (::abs(x1 - pos.x()) < dx) {
-				m_dragCursor = DragNoteLow;
-				QWidget::setCursor(QCursor(Qt::SizeHorCursor));
-				QToolTip::showText(
-					QWidget::mapToGlobal(pos),
-					tr("Low: %1 (%2)")
-						.arg(noteName(m_iNoteLow)).arg(m_iNoteLow), this);
-			}
-			else
-			if (m_dragCursor != DragNone) {
-				m_dragCursor  = DragNone;
-				QWidget::unsetCursor();
-			}
-		}
-		break;
-	case DragNoteLow:
-		if (m_bNoteRange) {
-			const int iNoteLow = safeNoteLow(noteAt(pos));
-			m_iNoteLowX = noteRect(iNoteLow).left();
-			QWidget::update();
-			QToolTip::showText(
-				QCursor::pos(),
-				tr("Low: %1 (%2)")
-					.arg(noteName(iNoteLow)).arg(iNoteLow), this);
-		}
-		break;
-	case DragNoteHigh:
-		if (m_bNoteRange) {
-			const int iNoteHigh = safeNoteHigh(noteAt(pos));
-			m_iNoteHighX = noteRect(iNoteHigh).right();
-			QWidget::update();
-			QToolTip::showText(
-				QCursor::pos(),
-				tr("High: %1 (%2)")
-					.arg(noteName(iNoteHigh)).arg(iNoteHigh), this);
-		}
-		break;
-	case DragNoteRange:
-		if (m_bNoteRange) {
-			const int w = QWidget::width();
-			if (w > 0) {
-				// Rubber-band offset selection...
-				const QRect& rect = QRect(m_posDrag, pos).normalized();
-				int iNoteLow  = (NUM_NOTES * rect.left())  / w;
-				int iNoteHigh = (NUM_NOTES * rect.right()) / w;
-				if (iNoteLow  < MIN_NOTE)
-					iNoteLow  = MIN_NOTE;
-				if (iNoteLow  > iNoteHigh)
-					iNoteLow  = iNoteHigh;
-				if (iNoteHigh > MAX_NOTE)
-					iNoteHigh = MAX_NOTE;
-				if (iNoteHigh < iNoteLow)
-					iNoteHigh = iNoteLow;
-				m_iNoteLowX   = noteRect(iNoteLow).left();
-				m_iNoteHighX  = noteRect(iNoteHigh).right();
-				QWidget::update();
-				QToolTip::showText(
-					QWidget::mapToGlobal(pos),
-					tr("Low: %1 (%2) High: %3 (%4)")
-						.arg(noteName(iNoteLow)).arg(iNoteLow)
-						.arg(noteName(iNoteHigh)).arg(iNoteHigh), this);
-			}
-		}
-		break;
 	case DragStart:
-		if (m_bNoteRange) {
-			if ((m_posDrag - pos).manhattanLength()
-				> QApplication::startDragDistance()) {
-				// Start dragging alright...
-				if (m_dragCursor != DragNone)
-					m_dragState = m_dragCursor;
-				else
-				if (pMouseEvent->modifiers()
-					& (Qt::ShiftModifier | Qt::ControlModifier)) {
-					// Rubber-band starting...
-					m_dragState = m_dragCursor = DragNoteRange;
-					QWidget::setCursor(QCursor(Qt::SizeHorCursor));
-				}
-			}
-		}
-		// Are we still hovering the keyboard?
-		if (m_dragState == DragStart) {
-			dragNoteOn(pos);
-			noteToolTip(pos);
-		}
+		dragNoteOn(pos);
+		noteToolTip(pos);
 		// Fall thru...
+	case DragNone:
 	default:
 		break;
 	}
@@ -640,50 +471,6 @@ void drumkv1widget_keybd::mouseMoveEvent ( QMouseEvent *pMouseEvent )
 
 void drumkv1widget_keybd::mouseReleaseEvent ( QMouseEvent *pMouseEvent )
 {
-	const QPoint& pos = pMouseEvent->pos();
-
-	switch (m_dragState) {
-	case DragNoteLow:
-		if (m_bNoteRange) {
-			setNoteLow(noteAt(pos));
-			emit noteRangeChanged();
-		}
-		break;
-	case DragNoteHigh:
-		if (m_bNoteRange) {
-			setNoteHigh(noteAt(pos));
-			emit noteRangeChanged();
-		}
-		break;
-	case DragNoteRange:
-		if (m_bNoteRange) {
-			const int w = QWidget::width();
-			if (w > 0) {
-				const QRect& rect = QRect(m_posDrag, pos).normalized();
-				int iNoteLow  = (NUM_NOTES * rect.left())  / w;
-				int iNoteHigh = (NUM_NOTES * rect.right()) / w;
-				if (iNoteLow  < MIN_NOTE)
-					iNoteLow  = MIN_NOTE;
-				if (iNoteHigh > MAX_NOTE)
-					iNoteHigh = MAX_NOTE;
-				if (iNoteLow  > iNoteHigh)
-					iNoteLow  = iNoteHigh;
-				if (iNoteHigh < iNoteLow)
-					iNoteHigh = iNoteLow;
-				m_iNoteLow    = iNoteLow;
-				m_iNoteLowX   = noteRect(iNoteLow).left();
-				m_iNoteHigh   = iNoteHigh;
-				m_iNoteHighX  = noteRect(iNoteHigh).right();
-				QWidget::update();
-				emit noteRangeChanged();
-			}
-		}
-		break;
-		// Fall thru...
-	default:
-		break;
-	}
-
 	// Were we stuck on some keyboard note?
 	resetDragState();
 
